--- a/rtc.css
+++ b/rtc.css
@@ -92,8 +92,12 @@ article {
     margin-right: 25px;
 }
 @media screen and(max-width:375px) {
-    body {width: 100%;
-         margin-left: auto;
+    body {
+        width: 100%;
+        margin-left: auto;
     }
-    section {width: 100%}
+    section {
+        width: 100%;
+        min-height: 100vh;
+    }
 }
