--- a/rtc.css
+++ b/rtc.css
@@ -97,7 +97,9 @@ article {
         margin-left: auto;
     }
     section {
-        width: 100%;
-        min-height: 100vh;
+        margin-left: 0px;
+    }
+    .attribution {
+        padding-top: 10px;
     }
 }
