--- a/rtc.css
+++ b/rtc.css
@@ -94,6 +94,7 @@ article {
 @media screen and(max-width:375px) {
     section {
         margin-left: 0px;
+        margin-top: 100px;
     }
     .attribution {
         padding-top: 10px;
