--- a/rtc.css
+++ b/rtc.css
@@ -93,10 +93,18 @@ article {
 }
 @media screen and(max-width:375px) {
     section {
-        margin-left: 0px;
-        margin-top: 100px;
+    display: grid;
+    background-color: hsl(213, 19%, 18%);
+    width: 350px;
+    height: 350px;
+    margin-top: 50px;
+    margin-left: 0px;
+    border-radius: 20px;
     }
     .attribution {
-        padding-top: 10px;
+        font-size: 11px; 
+        text-align: center; 
+        padding-top: 10px; 
+        padding-left: 0px;
     }
 }
